Update deployed files.

--- a/app/template.html
+++ b/app/template.html
@@ -20,5 +20,6 @@
       <div class="mod_title">Visualization</div>
     </div>
     <div class="mod_body vis"></div>
+    <div class="spec_desc"></p>
   </div>
 </div>
