--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="vendor/d3.min.js" charset="utf-8"></script>
     <script src="vendor/d3.geo.projection.min.js" charset="utf-8"></script>
     <script src="vendor/d3.layout.cloud.js" charset="utf-8"></script>
+    <script src="vendor/jsonlint.js" charset="utf-8"></script>
     <script src="vendor/ace/ace.js" charset="utf-8"></script>
     <script src="vendor/vega.js" charset="utf-8"></script>
     <script src="app/specs.js" charset="utf-8"></script>
