--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="vendor/d3.layout.cloud.js" charset="utf-8"></script>
     <script src="vendor/ace/ace.js" charset="utf-8"></script>
     <script src="vendor/vega.js" charset="utf-8"></script>
+    <script src="vendor/vega-embed.js" charset="utf-8"></script>
     <script src="app/specs.js" charset="utf-8"></script>
     <script src="app/editor.js" charset="utf-8"></script>
     <style> body { margin: 0px; overflow: hidden; } </style>
