Update deployed files.

--- a/app/template.html
+++ b/app/template.html
@@ -3,8 +3,8 @@
     <div class="mod_header">
       <div class="mod_ctrls">
         <select class="sel_spec"></select>
-        <input type="button" class="btn_spec_format" value="Format"</input>
-        <input type="button" class="btn_spec_parse" value="Parse"</input>
+        <input type="button" class="btn_spec_format" value="Format"></input>
+        <input type="button" class="btn_spec_parse" value="Parse"></input>
       </div>
       <div class="mod_title">
         <a class="link_spec active">Vega</a>         
@@ -16,6 +16,7 @@
     <div class="mod_header">
       <div class="mod_ctrls">
         Renderer <select class="sel_render"></select>
+        <input type="button" class="btn_export" value="Export"></input>
       </div>
       <div class="mod_title">Visualization</div>
     </div>
