--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <title>Vega Editor</title>
     <link rel="stylesheet" type="text/css" href="app/editor.css"/>
-    <script src="vendor/topojson.js"charset="utf-8"></script>
-    <script src="vendor/d3.min.js" charset="utf-8"></script>
-    <script src="vendor/d3.geo.projection.min.js" charset="utf-8"></script>
-    <script src="vendor/d3.layout.cloud.js" charset="utf-8"></script>
-    <script src="vendor/ace/ace.js" charset="utf-8"></script>
-    <script src="vendor/vega.js" charset="utf-8"></script>
-    <script src="vendor/vega-embed.js" charset="utf-8"></script>
+    <script src="node_modules/topojson/topojson.min.js"charset="utf-8"></script>
+    <script src="node_modules/d3/d3.min.js" charset="utf-8"></script>
+    <script src="node_modules/d3-geo-projection/d3.geo.projection.min.js" charset="utf-8"></script>
+    <script src="node_modules/d3-cloud/d3.layout.cloud.js" charset="utf-8"></script>
+    <script src="node_modules/ace-builds/src-min/ace.js" charset="utf-8"></script>
+    <script src="node_modules/vega/vega.js" charset="utf-8"></script>
+    <script src="node_modules/vega-embed/vega-embed.js" charset="utf-8"></script>
     <script src="app/specs.js" charset="utf-8"></script>
     <script src="app/editor.js" charset="utf-8"></script>
     <style> body { margin: 0px; overflow: hidden; } </style>
