--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <script src="vendor/ace/ace.js" charset="utf-8"></script>
     <script src="vendor/vega.js" charset="utf-8"></script>
     <script src="vendor/vega-embed.js" charset="utf-8"></script>
+    <script src="vendor/vega-lite.js" charset="utf-8"></script>
+    <script src="vendor/json3-compactstringify.js" charset="utf-8"></script>
+    <script>
+      JSON3 = JSON3.noConflict();
+    </script>
     <script src="app/specs.js" charset="utf-8"></script>
     <script src="app/editor.js" charset="utf-8"></script>
     <style> body { margin: 0px; overflow: hidden; } </style>
