--- a/app/template.html
+++ b/app/template.html
@@ -2,8 +2,8 @@
   <div class="mod_spec module">
     <div class="mod_header">
       <div class="mod_ctrls">
-        <select class="sel_vg_spec hide-vl"></select>
-        <select class="sel_vl_spec hide-vg"></select>
+        <select class="sel_vega_spec hide-vl"></select>
+        <select class="sel_vega-lite_spec hide-vg"></select>
         <input type="button" class="btn_spec_format" value="Format"></input>
         <input type="button" class="btn_vg_parse hide-vl" value="Parse"></input>
         <input type="button" class="btn_vl_parse hide-vg" value="Parse"></input>
