Update deployed files.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script>
       JSON3 = JSON3.noConflict();
     </script>
-    <script src="app/specs.js" charset="utf-8"></script>
+    <script src="app/vega-specs.js" charset="utf-8"></script>
+    <script src="app/vl-specs.js" charset="utf-8"></script>
     <script src="app/editor.js" charset="utf-8"></script>
     <style> body { margin: 0px; overflow: hidden; } </style>
   </head>
