MVP for making compassQL working with vega-editor

--- a/index.html
+++ b/index.html
@@ -14,14 +14,16 @@
     <script src="vendor/vega.js" charset="utf-8"></script>
     <script src="vendor/vega-embed.js" charset="utf-8"></script>
     <script src="vendor/vega-lite.js" charset="utf-8"></script>
+    <script src="vendor/compassql.js" charset="utf-8"></script>
     <script src="vendor/json3-compactstringify.js" charset="utf-8"></script>
     <script>
       JSON3 = JSON3.noConflict();
     </script>
     <script src="app/vega-specs.js" charset="utf-8"></script>
     <script src="app/vl-specs.js" charset="utf-8"></script>
+    <script src="app/cql-specs.js" charset="utf-8"></script>
     <script src="app/editor.js" charset="utf-8"></script>
-    
+
     <script src="app/debugger.js" charset="utf-8"></script>
     <script src="app/model.js" charset="utf-8"></script>
     <script src="app/datasets.js" charset="utf-8"></script>
