--- a/app/template.html
+++ b/app/template.html
@@ -2,29 +2,33 @@
   <div class="mod_spec module">
     <div class="mod_header">
       <div class="mod_ctrls">
-        <select class="sel_vega_spec hide-vl"></select>
-        <select class="sel_vega-lite_spec hide-vg"></select>
+        <select class="sel_vega_spec hide-vl hide-cql"></select>
+        <select class="sel_vega-lite_spec hide-vg hide-cql"></select>
+        <select class="sel_compassql_spec hide-vg hide-vl"></select>
         <input type="button" class="btn_spec_format" value="Format"></input>
-        <input type="button" class="btn_vg_parse hide-vl" value="Parse"></input>
-        <input type="button" class="btn_vl_parse hide-vg" value="Parse"></input>
-        <span class="btn_debug fa fa-bug hide-vl" title="Debug"></span>
+        <input type="button" class="btn_vg_parse hide-vl hide-cql" value="Parse"></input>
+        <input type="button" class="btn_vl_parse hide-vg hide-cql" value="Parse"></input>
+        <input type="button" class="btn_cql_parse hide-vg hide-vl" value="Parse"></input>
+        <span class="btn_debug fa fa-bug hide-vl hide-cql" title="Debug"></span>
       </div>
       <div class="mod_title">
         <select class="sel_mode">
           <option value="vega">Vega</option>
           <option value="vega-lite">Vega-lite</option>
+          <option value="compassql">CompassQL</option>
         </select>
       </div>
     </div>
-    <div class="mod_body spec vl-spec hide-vg" spellcheck="false"></div>
-    <div class="vg_pane mod_subheader hide-vg">
+    <div class="mod_body spec cql-spec hide-vg hide-vl" spellcheck="false"></div>
+    <div class="mod_body spec vl-spec hide-vg hide-cql" spellcheck="false"></div>
+    <div class="vg_pane mod_subheader hide-vg hide-cql">
       <div class="mod_ctrls">
         <input type="button" class="btn_to_vega" value="Edit Vega spec"></input>
       </div>
       Vega compiled from Vega-Lite (read-only)
       <span class="click_toggle_vega" title="Expand/Collapse Vega editor"></span>
     </div>
-    <div class="mod_body spec vg-spec" spellcheck="false"></div>
+    <div class="mod_body spec vg-spec hide-cql" spellcheck="false"></div>
     <div class="vg_pane mod_subheader debug">
       <div class="mod_ctrls">
         <select class="sel_debug debug">
@@ -46,11 +50,12 @@
     <div class="mod_header">
       <div class="mod_ctrls">
         Renderer <select class="sel_render"></select>
-        <input type="button" class="btn_export" value="Export"></input>
+        <input type="button" class="btn_export hide-cql" value="Export"></input>
       </div>
       <div class="mod_title">Visualization</div>
     </div>
-    <div class="vis"></div>
+    <div class="vis hide-cql"></div>
+    <div class="vislist hide-vg hide-vl"></div>
     <div class="mod_params"></div>
     <div class="spec_desc"></p>
   </div>
