--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <title>Vega Editor</title>
     <link rel="stylesheet" type="text/css" href="app/debugger.css"/>
+    <link rel="stylesheet" type="text/css" href="app/config.css"/>
     <link rel="stylesheet" type="text/css" href="app/editor.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="vendor/topojson.js"charset="utf-8"></script>
@@ -21,8 +22,9 @@
     <script src="app/vega-specs.js" charset="utf-8"></script>
     <script src="app/vl-specs.js" charset="utf-8"></script>
     <script src="app/editor.js" charset="utf-8"></script>
-    
+
     <script src="app/debugger.js" charset="utf-8"></script>
+    <script src="app/config.js" charset="utf-8"></script>
     <script src="app/model.js" charset="utf-8"></script>
     <script src="app/datasets.js" charset="utf-8"></script>
     <script src="app/overview.js" charset="utf-8"></script>
