Place timer in console

--- a/app/template.html
+++ b/app/template.html
@@ -55,7 +55,7 @@
       <div class="mod_title">Visualization</div>
     </div>
     <div class="vis hide-cql"></div>
-    <div class="vislist hide-vg hide-vl"><div class="querytime"></div><div class="grouplist"></div></div>
+    <div class="vislist hide-vg hide-vl"><div class="grouplist"></div></div>
     <div class="mod_params"></div>
     <div class="spec_desc"></p>
   </div>
