--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="vendor/d3.geo.projection.min.js" charset="utf-8"></script>
     <script src="vendor/d3.layout.cloud.js" charset="utf-8"></script>
     <script src="vendor/ace/ace.js" charset="utf-8"></script>
+    <script src="vendor/ace/ext-language_tools.js"></script>
     <script src="vendor/vega.js" charset="utf-8"></script>
     <script src="vendor/vega-embed.js" charset="utf-8"></script>
     <script src="vendor/vega-lite.js" charset="utf-8"></script>
