Add announcements for new editor.

--- a/app/template.html
+++ b/app/template.html
@@ -1,3 +1,6 @@
+<div class="announcement">
+  This is the old editor for Vega 2 and Vega-Lite 1. For the latest versions, use the <a href="https://vega.github.io/editor/">new editor</a>!
+</div>
 <div class="vega-editor">
   <!-- LHS/SPECIFICATION PANE -->
   <div class="mod_spec module">
